--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,11 @@ h2 {
 
 
 #meetTheTeam {
-    margin-bottom: 1em;
+    margin-bottom: 2em;
+}
+
+#ourProjects {
+    margin-bottom: 2em;
 }
 
 #abacusTitle {
@@ -143,4 +147,13 @@ h2 {
 .title-container {
     width: 550px;
     padding: 20px;
+}
+
+#people {
+    margin-bottom: 100px;
+}
+
+#projects {
+    margin-bottom: 100px;
+
 }
